Fixed La-Lu and Ac-Lr overflow in boxes

--- a/PeriodicTable.css
+++ b/PeriodicTable.css
@@ -30,7 +30,7 @@ body {
     display: grid;
     border: 1px solid black;
     background-color: #63ffb9;
-    font-size: 80%;
+    font-size: 1.3vw;
     width: 95%;
     height: 95%;
     padding: 1px;
@@ -43,7 +43,7 @@ body {
     display: grid;
     border: 1px solid black;
     background-color: #ff63dd;
-    font-size: 80%;
+    font-size: 1.3vw;
     width: 95%;
     height: 95%;
     padding: 1px;
